<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Storming</string>

    <string name="text"> text </string>
    <string name="refresh"> Refresh </string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_share">Share</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_general_location_title">Location</string>
    <string name="pref_general_location_key" translatable="false">location</string>
    <string name="pref_general_location_default" translatable="false">Nanjing</string>

    <string name="pref_general_units_title">Weather Units</string>
    <string name="pref_general_units_key" translatable="false">units</string>
    <string name="pref_general_units_metric" translatable="false">Metric</string>
    <string name="pref_general_units_imperial" translatable="false">Imperial</string>
    <string name="pref_general_degreeunits_default">@string/pref_general_units_metric</string>

    <string name="menu_action_map_title">Locate in Map</string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g>%%</string>
    <string name="format_wind"><xliff:g id="wind">%1$1.0f</xliff:g>km/H <xliff:g id="wind_direction">%2$s</xliff:g></string>
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g>hPa</string>
</resources>
