<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_general_location_title"
        android:key="@string/pref_general_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="text"
        android:defaultValue="@string/pref_general_location_default"/>

    <ListPreference
        android:title="@string/pref_general_units_title"
        android:dialogTitle="@string/pref_general_units_title"
        android:key="@string/pref_general_units_key"
        android:defaultValue="@string/pref_general_degreeunits_default"
        android:entries="@array/pre_general_degreeunits_values"
        android:entryValues="@array/pre_general_degreeunits_values">

    </ListPreference>

</PreferenceScreen>
